deployment/gerenciamento-rural.yaml
---
# BANCO DE DADOS (POSTGRESQL)
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: pasto-livre-prod
spec:
  serviceName: "postgresql-pasto-livre"
  selector:
    matchLabels:
      app: postgres-db
  template:
    metadata:
      labels:
        app: postgres-db
    spec:
      containers:
      - name: postgres
        image: postgres:17-alpine
        ports:
        - containerPort: 5432
        volumeMounts:
        - name: db-data
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: postgres-pvc

---
# SERVIÇO DO BANCO (O DNS INTERNO)
apiVersion: v1
kind: Service
metadata:
  name: postgresql-pasto-livre
  namespace: pasto-livre-prod
spec:
  selector:
    app: postgres-db
  ports:
    - port: 5432
      targetPort: 5432

---
# API
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gerenciamento-rural-api
  namespace: pasto-livre-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gerenciamento-rural-api
  template:
    metadata:
      labels:
        app: gerenciamento-rural-api
    spec:
      containers:
      - name: gerenciamento-rural-api
        image: eduardotartas/gerenciamento-rural-api:latest
        imagePullPolicy: IfNotPresent
        command: ["sh", "-c", "npx prisma migrate deploy && exec node server.js"]
        ports:
        - containerPort: 6060
        livenessProbe:
          tcpSocket:
            port: 6060
          initialDelaySeconds: 15
          periodSeconds: 20
        readinessProbe:
          tcpSocket:
            port: 6060
          initialDelaySeconds: 5
          periodSeconds: 10

---
# SERVIÇO DA API
apiVersion: v1
kind: Service
metadata:
  name: gerenciamento-rural-api-service
  namespace: pasto-livre-prod
spec:
  selector:
    app: gerenciamento-rural-api
  ports:
    - port: 80
      targetPort: 6060
